tests/neg/semantic_funcptr_compare_order_invalid.baa
// EXPECT: مقارنة مؤشرات الدوال تدعم فقط

صحيح اجمع(صحيح أ, صحيح ب) {
    إرجع أ + ب.
}

صحيح الرئيسية() {
    دالة(صحيح, صحيح) -> صحيح ف = اجمع.
    إذا (ف < عدم) {
        إرجع ١.
    }
    إرجع ٠.
}

